--- a/composer.json
+++ b/composer.json
@@ -4,5 +4,15 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^5.5"
+    },
+    "autoload": {
+        "psr-4": {
+            "Nikapps\\RtlMarkDown\\": "src/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Nikapps\\RtlMarkDown\\Tests\\": "tests/"
+        }
     }
 }
